--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
