--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Vinicius <vinniimiranda@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node build/dev-server.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "node server.js",
     "build": "node build/build.js",
     "postinstall": "npm run build"
